chore: change primary color

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,9 @@ repo_url: https://github.com/HansRobo/mycheatsheet_mkdocs
 site_name: Hans_Robo's cheatsheet
 theme:
   name: material
+  palette:
+    primary: amber
+
 extra:
   font:
     text: "Noto Sans JP"
