feat: add tag plugin

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ copyright: "Copyright &copy; 2022 HansRobo"
 plugins:
   - search
   - git-revision-date-localized
+  - tags
 
 # Extensions
 markdown_extensions:
