--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 repo_url: https://github.com/HansRobo/mycheatsheet_mkdocs
-site_name: Hans_Robo's cheatsheet
+site_name: HansRobo's cheatsheet
 theme:
   name: material
   palette:
