--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,7 @@ extra:
       link: https://github.com/HansRobo
   analytics:
     provider: google
-    property: G-P5846VEQ4L
+    property: G-8WVDNWYEQF
 copyright: "Copyright &copy; 2022 HansRobo"
 plugins:
   - search
