--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,9 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: 3.x
-      - run: pip install -r ./requirements.txt
-      - run: mkdocs gh-deploy --force
+      - uses: abatilo/actions-poetry@v3
+        with:
+          poetry-version: 2.12
+      - run: poetry install --no-interaction
+      - run: poetry run mkdocs gh-deploy --force
 
