--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,20 +1,54 @@
-name: ci 
+name: docs
+
 on:
   push:
     branches:
-      - master 
+      - master
       - main
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: actions/configure-pages@v5
+
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
-      - uses: abatilo/actions-poetry@v3
-      - name: make package
-        run: mkdir -p src/mycheatsheet_mkdocs && touch src/mycheatsheet_mkdocs/__init__.py
-      - run: poetry install --no-interaction
-      - run: poetry run mkdocs gh-deploy --force
+          python-version: '3.12'
 
+      - uses: abatilo/actions-poetry@v3
+
+      - name: Install dependencies
+        run: poetry install --no-interaction
+
+      - name: Build documentation
+        run: poetry run zensical build --clean
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v4
+        with:
+          path: site
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
