--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,6 +34,9 @@ jobs:
       - name: Install dependencies
         run: poetry install --no-interaction
 
+      - name: Generate index
+        run: poetry run python scripts/generate_index.py
+
       - name: Build documentation
         run: poetry run zensical build --clean
 
