--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,16 +29,17 @@ jobs:
         with:
           python-version: '3.12'
 
-      - uses: abatilo/actions-poetry@v3
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
 
       - name: Install dependencies
-        run: poetry install --no-interaction
+        run: uv sync
 
       - name: Generate index
-        run: poetry run python scripts/generate_index.py
+        run: uv run python scripts/generate_index.py
 
       - name: Build documentation
-        run: poetry run zensical build --clean
+        run: uv run zensical build --clean
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
