--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,18 @@
-[tool.poetry]
+[project]
 name = "mycheatsheet_mkdocs"
 version = "0.1.0"
 description = "Documentation site powered by Zensical"
-authors = ["Kotaro Yoshimoto <pythagora.yoshimoto@gmail.com>"]
-package-mode = false
-
-[tool.poetry.dependencies]
-python = "^3.10"
-zensical = "*"
-pymdown-extensions = "*"
-mdx_truly_sane_lists = "*"
-pyyaml = "*"
+authors = [
+    {name = "Kotaro Yoshimoto", email = "pythagora.yoshimoto@gmail.com"}
+]
+requires-python = ">=3.10"
+dependencies = [
+    "zensical",
+    "pymdown-extensions",
+    "mdx_truly_sane_lists",
+    "pyyaml",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
